[gd_scene load_steps=6 format=3 uid="uid://5b0m2ehmcm1j"]

[ext_resource type="Script" path="res://score_frenzy_mode.gd" id="1_0cfl2"]
[ext_resource type="PackedScene" uid="uid://dp2430ah85wf6" path="res://collectible.tscn" id="2_148kg"]
[ext_resource type="PackedScene" uid="uid://c82xx3vfs1iw7" path="res://effect_area.tscn" id="3_8ovyo"]
[ext_resource type="PackedScene" uid="uid://d4eeknwdl85f1" path="res://game.tscn" id="4_7aggm"]

[sub_resource type="LabelSettings" id="LabelSettings_3tkf6"]
font_color = Color(0, 0, 0, 1)

[node name="ScoreMode" type="Node2D"]
script = ExtResource("1_0cfl2")
collectible = ExtResource("2_148kg")
min_spawn_x = 64
max_spawn_x = 1216
min_spawn_y = 64
max_spawn_y = 656
area = ExtResource("3_8ovyo")

[node name="UI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Score" type="Label" parent="UI"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "
0 points"
label_settings = SubResource("LabelSettings_3tkf6")

[node name="Game" parent="." instance=ExtResource("4_7aggm")]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="ball_touched_floor" from="Game" to="." method="_on_game_ball_touched_floor"]
[connection signal="game_started" from="Game" to="." method="_on_game_game_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
